# SLAM_Challenge_2023Xiamen

./: run.sh
src/SLAM_Challenge/SC-LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt  package.xml
src/SLAM_Challenge/SC-LeGO-LOAM/LeGO-LOAM/include/: utility.h
src/SLAM_Challenge/SC-LeGO-LOAM/LeGO-LOAM/launch/: run.launch  test.rviz
src/SLAM_Challenge/SC-LeGO-LOAM/LeGO-LOAM/src/: featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp  transformFusion.cpp
src/SLAM_Challenge/SC-LeGO-LOAM/data_reader/: CMakeLists.txt  package.xml
src/SLAM_Challenge/SC-LeGO-LOAM/data_reader/config/: data_config.yaml
src/SLAM_Challenge/SC-LeGO-LOAM/data_reader/include/data_reader/: cout_tools.hpp  data_reader.hpp  point_type.hpp
src/SLAM_Challenge/SC-LeGO-LOAM/data_reader/include/pathchwork/: patchworkpp.h
src/SLAM_Challenge/SC-LeGO-LOAM/data_reader/src/: data_reader.cpp  main.cpp  patchworkpp.cpp
src/SLAM_Challenge/SC-LeGO-LOAM/path_merge/: CMakeLists.txt  package.xml
src/SLAM_Challenge/SC-LeGO-LOAM/path_merge/scripts/: result_merge.py
